[package]
name = "envoy-service-playground"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
proxy-wasm = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
